兄弟要素以外にどうhoverをかけるか

--- a/style.css
+++ b/style.css
@@ -101,30 +101,59 @@ height: 100vh;
 
 .cook{
     width: 100vw;
-    height: 150vh;
+    /* height: 100%; */
     /* background-color: azure; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.cook_container{
-
-}
-
 .cook_contents{
-    /* background-color: wheat; */
-    display: flex;
+    background-color: wheat;
+    display:flex;
     margin: 100px 280px;
 }
 
-.contents_img{
+
+
+.cook_img1{
+   position: relative;
+   width: 400px;
+   height: 300px;
+   margin: 0 auto;
+  display: block;
+   /* overflow: hidden; */
+}  
+
+.cook_img1 img{
+    position: absolute;
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+    transition: .4s ease-in-out;
+    /* display: block;
+    width: 100%; */
+}
+
+.img_size{
     box-shadow: 0 2px 3px rgba(0,0,0,0.57);
     border-radius: 25px;
 }
 
+/* 画像自体へのhoverはできた */
+/* .cook_img1:hover img:nth-of-type(2) {
+	opacity: 0;
+} */
+
+/* 兄弟要素以外にはhoverかけられない、、、 */
+.sasami_text a:hover+.cook_img1 img:nth-of-type(2){
+   opacity: 0;
+}
+
+
 .sasami_text{
     padding: 0 30px;
     z-index: 100;
+    flex-direction: column;
 }
 
 h3{
@@ -142,6 +171,19 @@ h5{
     color: #4c4c4c;
     background: linear-gradient(transparent 0%, #ffff66 0%);
     display: inline;
+}
+
+.button_cook{
+    display: block;
+    text-decoration: none;
+    background:#fff;
+    border: 3px solid #293462;
+    border-radius: 10px;
+    padding: 3px 10px ;
+    width: 200px;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
 }
 
 img{
@@ -166,6 +208,7 @@ img{
     justify-content: center;
     flex-direction: column;
 }
+
 .eatery_contents{
     z-index: 100;
     /* background-color: aliceblue; */
@@ -184,3 +227,5 @@ footer{
     display: flex;
     justify-content: center;
 }
+
+
