--- a/style.css
+++ b/style.css
@@ -18,6 +18,49 @@
       src: url(/font/Comic\ Sans\ MS.ttf);
   }
 
+  .fadein{
+    opacity: 0;
+    transform: translateY(20px);
+    transition: all 1s;
+  }
+
+  .scroll-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    
+    width :34px;
+    height: 55px;
+  }
+  .mousey {
+    width: 3px;
+    padding: 10px 15px;
+    height: 35px;
+    border: 2px solid #fff;
+    border-radius: 25px;
+    opacity: 0.75;
+    box-sizing: content-box;
+  }
+  .scroller {
+    width: 3px;
+    height: 10px;
+    border-radius: 25%;
+    background-color: #fff;
+    animation-name: scroll;
+    animation-duration: 2.2s;
+    animation-timing-function: cubic-bezier(.15,.41,.69,.94);
+    animation-iteration-count: infinite;
+}
+@keyframes scroll {
+  0% { opacity: 0; }
+  10% { transform: translateY(0); opacity: 1; }
+  100% { transform: translateY(15px); opacity: 0;}
+}
+
+
 body{
 background-image: linear-gradient(90deg, transparent 31px, rgb(184, 184, 184) 32px),linear-gradient(0deg, transparent 31px,rgb(184, 184, 184) 32px);
 background-size: 32px 32px;
@@ -39,7 +82,7 @@ h1{
 
 .bg-fixed{
     position: fixed;
-    z-index: 1;
+    z-index: 0;
     height: 100%;
     width: 100%;
     right: 0px;
@@ -73,6 +116,7 @@ h2{
 }
 .top-icon{
     z-index: 100;
+    display: flex;
 }
 
 nav{
@@ -91,13 +135,41 @@ z-index: 100;
 }
 
 .part{
+    /* background-color: #ffff66; */
 z-index: 100;
-display: flex;
-justify-content: center;
-align-items: center;
 width: 100vw;
 height: 100vh;
+position: relative;
+margin: 0 auto;
+display: flex;
+justify-content: center;
 }
+.part_img{
+    /* background-color: antiquewhite; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.part_img img{
+    /* background-color: aqua; */
+    position: absolute;
+    transition: .4s ease-in-out;
+}
+
+.part_img img:nth-of-type(1){
+   opacity: 0;
+}
+
+.part_img:hover img:nth-of-type(1){
+    opacity: 1;
+}
+
+.part_img:hover img:nth-of-type(2){
+    opacity: 0;
+}
+
 
 .cook{
     width: 100vw;
@@ -108,11 +180,15 @@ height: 100vh;
     align-items: center;
 }
 .cook_contents{
-    background-color: wheat;
+    /* background-color: wheat; */
     display:flex;
+    justify-content: center;
     margin: 100px 280px;
 }
 
+.cook_center{
+    display: flex;
+}
 
 
 .cook_img1{
@@ -126,28 +202,25 @@ height: 100vh;
 
 .cook_img1 img{
     position: absolute;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
     transition: .4s ease-in-out;
-    /* display: block;
-    width: 100%; */
 }
 
 .img_size{
     box-shadow: 0 2px 3px rgba(0,0,0,0.57);
     border-radius: 25px;
+    padding: 0;
+    margin: 0;
 }
 
-/* 画像自体へのhoverはできた */
-/* .cook_img1:hover img:nth-of-type(2) {
+/* 画像自体へのhoverは */
+.cook_img1:hover img:nth-of-type(2) {
 	opacity: 0;
-} */
+}
 
 /* 兄弟要素以外にはhoverかけられない、、、 */
-.sasami_text a:hover+.cook_img1 img:nth-of-type(2){
+/* .sasami_text a:hover+.cook_img1 img:nth-of-type(2){
    opacity: 0;
-}
+} */
 
 
 .sasami_text{
@@ -210,11 +283,33 @@ img{
 }
 
 .eatery_contents{
+    /* background-color: #ffff66; */
     z-index: 100;
-    /* background-color: aliceblue; */
     height: 50vh;
     width: 400px;
     margin: 30px auto;
+}
+
+.eatery_text{
+    width: 100%;
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+.button_eatery{
+    display: block;
+    text-decoration: none;
+    background:#fff;
+    border: 3px solid #293462;
+    border-radius: 10px;
+    padding: 3px 10px ;
+    width: 200px;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
 }
 
 h6{
